# TNB_tools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
MastersThesis/: BBL_2018_TNBD_DITD.ipynb
TNB_tools/: magnetic_declination.py
examples/: CreateDataTree_MSThesis.ipynb  HSSW_Production_2017.ipynb  MS_plots.ipynb  Preprocess_DITx.ipynb
momentum_balance/: MooringD_DataPrep.ipynb  P2_P3_RSO2018_DataPrep.ipynb  Tidal_Influnence.ipynb
preprocess/: CreateDataTree_MSThesis.ipynb  DITD_2018_RawSBE_to_netcdf.ipynb  MooringD_MatToNetcdf.ipynb  P2_P3_RSO2018_DataPrep.ipynb  Preprocess_DITx.ipynb
